Spacing and text fixes

--- a/src/app/components/carrousels/carrousel-cards/carrousel-cards.component.scss
+++ b/src/app/components/carrousels/carrousel-cards/carrousel-cards.component.scss
@@ -17,7 +17,7 @@ swiper-container {
       display: flex;
       justify-content: center;
       align-items: center;
-      background-color: #fff1f1;
+      background-color: #fff5f4;
       margin-bottom: 100px;
 
       .mySwiperIf {
