--- a/src/app/sections/building-debook-in-public/building-debook-in-public.component.scss
+++ b/src/app/sections/building-debook-in-public/building-debook-in-public.component.scss
@@ -85,7 +85,7 @@
     width: 90%;
     height: auto;
     margin: auto;
-    margin-bottom: 140px;
+    margin-bottom: 64px;
     display: block;
     background: white;
     border: 1px solid #ffe9e9;
