--- a/src/app/sections/hero/hero.component.scss
+++ b/src/app/sections/hero/hero.component.scss
@@ -131,7 +131,7 @@
         font-size: 2em;
         font-weight: 600;
         letter-spacing: -0.05em;
-        width: 80%;
+        // width: 80%;
         margin: 0 auto;
         margin-top: 0px;
         text-align: center;
@@ -268,7 +268,7 @@
         font-size: 2em;
         font-weight: 600;
         letter-spacing: -0.05em;
-        width: 80%;
+        // width: 80%;
         margin: 0 auto;
         margin-top: 0px;
         text-align: center;
