--- a/src/app/sections/team/team.component.scss
+++ b/src/app/sections/team/team.component.scss
@@ -128,7 +128,7 @@
     width: 90%;
     margin: 0 auto;
     margin-top: 80px;
-    margin-bottom: 80px;
+    margin-bottom: 24px;
 
     .team-title {
       font-weight: 700;
