--- a/src/app/sections/unicorn-mansion/unicorn-mansion.component.scss
+++ b/src/app/sections/unicorn-mansion/unicorn-mansion.component.scss
@@ -102,6 +102,8 @@
 // mobile------------------------------------------------------------
 @media screen and (max-width: 992px) {
   .unicorn-mansion-container {
+    margin-bottom: 24px;
+    margin-top: 50px;
     .unicorn-mansion-title {
       width: 100%;
       text-align: center;
@@ -114,6 +116,7 @@
         font-weight: 600;
         letter-spacing: -0.03em;
         padding: 0px 25px 15px 25px;
+        line-height: 48px;
       }
     }
     .unicorn-mansion-content {
